# social_support_perception

./:  requirements.txt  README.md  main.py  perception_analysis.ipynb  perception_viz.ipynb  pyproject.toml
data/: citizens_by_birth.xlsx  eu_migrants_2019.xlsx  non_eu_countries_2019.xlsx
