[project]
name = "project-perception"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaleido>=1.3.0",
    "nbformat>=4.2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=5.24",
]
[tool.uv]
package = false
